feat: add terminal shortcut to Ctrl+Cmd pattern
- Update terminal launch: Ctrl+Alt+Return → Ctrl+Cmd+Return
- Update README.md to reflect new terminal shortcut
- Update most used shortcuts section for consistency

Now all primary shortcuts use the unified Ctrl+Cmd pattern:
- Ctrl+Cmd+F - Toggle fullscreen
- Ctrl+Cmd+T - Toggle float
- Ctrl+Cmd+B - Balance space
- Ctrl+Cmd+R - Rotate space
- Ctrl+Cmd+Return - Open terminal
- Ctrl+Cmd+H/J/K/L - Resize windows

--- a/configs/.skhdrc
+++ b/configs/.skhdrc
@@ -59,8 +59,8 @@ ctrl + alt - space : yabai -m space --layout $(yabai -m query --spaces --space |
 
 # ===== SAFE UTILITIES =====
 
-# Quick terminal (ctrl+alt+return - safe shortcut) - Open/focus Warp
-ctrl + alt - return : open -a /Applications/Warp.app
+# Quick terminal (ctrl+cmd+return - consistent pattern) - Open/focus Warp
+ctrl + cmd - return : open -a /Applications/Warp.app
 
 # New Warp window (ctrl+alt+shift+return)
 ctrl + alt + shift - return : open -na /Applications/Warp.app
