✨ Add window mirror/flip functionality
- Add Ctrl+Cmd+m shortcut for 180° window rotation
- Perfect complement to existing 270° rotation (Ctrl+Cmd+r)
- Updated README with clear degree indicators for both shortcuts
- Enables quick window layout flipping for improved workflow

Closes: Request for 180° window mirroring functionality

--- a/configs/.skhdrc
+++ b/configs/.skhdrc
@@ -37,6 +37,9 @@ ctrl + cmd - b : yabai -m space --balance
 # Rotate space (ctrl+cmd+r)
 ctrl + cmd - r : yabai -m space --rotate 270
 
+# Mirror/flip space 180 degrees (ctrl+cmd+m)
+ctrl + cmd - m : yabai -m space --rotate 180
+
 # ===== LAYOUTS =====
 
 # Cycle layouts (ctrl+alt+space)
