feat: sync yabai and skhd configs with latest changes
- Add gg app to yabai ignore list
- Add utility apps (Archive Utility, Keychain Access, Font Book, etc.) to yabai rules
- Add messaging apps to skhd floating list
- Add Nix installation instructions to README
- Add jq dependency to install script

--- a/configs/.skhdrc
+++ b/configs/.skhdrc
@@ -87,4 +87,11 @@ ctrl + alt + cmd - r : yabai --restart-service && skhd --restart-service
     "System Preferences"
     "System Settings"
     "Spotlight"
+#    "Telegram"
+#    "Discord"
+#    "Slack"
+    "Messages"
+#    "WhatsApp"
+    "Zoom"
+    "FaceTime"
 ]
